<resources>

    <string name="app_name">柚柚</string>
    <string name="main_bottom_home">首页</string>
    <string name="main_bottom_paohang">排行</string>
    <string name="main_bottom_fabu">发布</string>
    <string name="main_bottom_paike">拍客</string>
    <string name="main_bottom_my">我的</string>

    <string name="home_fragment_tabtext_allRank">总榜</string>
    <string name="home_fragment_tabtext_recommend">推荐</string>
    <string name="home_fragment_tabtext_recreation">娱乐</string>
    <string name="home_fragment_tabtext_society">社会</string>
    <string name="home_fragment_tabtext_cate">美食</string>
    <string name="home_fragment_tabtext_fun">搞笑</string>
    <string name="home_fragment_tabtext_world">世界</string>
    <string name="home_fragment_tabtext_technology">科技</string>
    <string name="home_fragment_tabtext_sports">体育</string>
    <string name="home_fragment_tabtext_treasure">财富</string>
    <string name="home_fragment_tabtext_car">汽车</string>
    <string name="home_fragment_tabtext_knowledge">新知</string>
    <string name="home_fragment_tabtext_live">生活</string>
    <string name="home_fragment_tabtext_weird">另类</string>
    <string name="home_fragment_tabtext_paikew">拍客</string>
    <string name="home_fragment_tabtext_rank">排行</string>

</resources>
